[package]
name = "rsx-web"
version = "0.1.0"
edition = "2024"

[dependencies]
rsx-reactive = { path = "../reactive" }
rsx = { path = "../rsx" }
web-sys = { version = "0.3.83", features = ["Document", "HtmlElement", "Node", "Window", "Text", "console", "Event", "Comment"] }
smallvec = "1.15.1"
paste = "1.0.15"
